[gd_scene load_steps=18 format=3 uid="uid://cgblw6qba8867"]

[ext_resource type="Script" path="res://main.gd" id="1_7qejv"]
[ext_resource type="PackedScene" uid="uid://vlnju5wdjwu4" path="res://UI/pause_menu.tscn" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://cg2cfvem03ua5" path="res://Materials/coast_sand_04/coast_sand_04_diff_4k.jpg" id="2_7kmux"]
[ext_resource type="PackedScene" uid="uid://b40m2h11vosx0" path="res://Player/player.tscn" id="2_xqvsl"]
[ext_resource type="Texture2D" uid="uid://nkv3qn1dmg41" path="res://Materials/coast_sand_04/coast_sand_04_nor_gl_4k.jpg" id="3_7qql8"]
[ext_resource type="Texture2D" uid="uid://ck8htfwtbksj1" path="res://Materials/coast_sand_04/coast_sand_04_rough_4k.jpg" id="4_u5eij"]
[ext_resource type="Script" path="res://HealthBar.gd" id="6_qe5w4"]
[ext_resource type="PackedScene" uid="uid://cgf1ro5wure86" path="res://Level/Temple.tscn" id="7_e6mty"]
[ext_resource type="PackedScene" uid="uid://bx2y3sxd7yxjh" path="res://Enemies/Caterpillar/CaterpillarController.tscn" id="8_fltoj"]
[ext_resource type="PackedScene" uid="uid://ony5fmh005rw" path="res://UI/final_screen.tscn" id="8_lcode"]
[ext_resource type="AudioStream" uid="uid://beo7hsegk7roc" path="res://SFX/music/i_killed_your_brother.wav" id="11_6dgnn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_equsk"]
sky_top_color = Color(0.183972, 0.22652, 0.285693, 1)
ground_bottom_color = Color(0.827543, 0.858808, 0.906203, 1)

[sub_resource type="Sky" id="Sky_76vrx"]
sky_material = SubResource("ProceduralSkyMaterial_equsk")

[sub_resource type="Environment" id="Environment_4bhii"]
background_mode = 2
background_energy_multiplier = 0.7
sky = SubResource("Sky_76vrx")
ambient_light_source = 3
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d3vmg"]
albedo_color = Color(0.995041, 0.813257, 0.581261, 1)
albedo_texture = ExtResource("2_7kmux")
metallic = 1.0
roughness_texture = ExtResource("4_u5eij")
normal_enabled = true
normal_texture = ExtResource("3_7qql8")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_triplanar = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pkm8"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agivn"]
bg_color = Color(0.552941, 0.12549, 0.156863, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_7qejv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4bhii")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="FloorDisc" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.05021, 0)
use_collision = true
radius = 53.1981
sides = 32
material = SubResource("StandardMaterial3D_d3vmg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_qe5w4")

[node name="PlayerHealthLabel" type="Label" parent="CanvasLayer/HealthBar"]
layout_mode = 0
offset_left = 17.0
offset_top = 17.0
offset_right = 99.0
offset_bottom = 40.0
text = "You"

[node name="PlayerHealthBar" type="ProgressBar" parent="CanvasLayer/HealthBar"]
layout_mode = 0
offset_left = 16.0
offset_top = 45.0
offset_right = 160.0
offset_bottom = 56.0
theme_override_styles/background = SubResource("StyleBoxFlat_2pkm8")
theme_override_styles/fill = SubResource("StyleBoxFlat_agivn")
value = 60.0
show_percentage = false

[node name="EnemyHealthLabel" type="Label" parent="CanvasLayer/HealthBar"]
layout_mode = 0
offset_left = 336.0
offset_top = 540.0
offset_right = 418.0
offset_bottom = 563.0
text = "Caterpillar"

[node name="EnemyHealthBar" type="ProgressBar" parent="CanvasLayer/HealthBar"]
layout_mode = 0
offset_left = 335.0
offset_top = 568.0
offset_right = 851.0
offset_bottom = 575.0
theme_override_styles/background = SubResource("StyleBoxFlat_2pkm8")
theme_override_styles/fill = SubResource("StyleBoxFlat_agivn")
value = 60.0
show_percentage = false

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("1_ig7tw")]

[node name="FinalScreen" parent="CanvasLayer" instance=ExtResource("8_lcode")]

[node name="Player" parent="." instance=ExtResource("2_xqvsl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 23.483)

[node name="CaterpillarController" parent="." instance=ExtResource("8_fltoj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.99677, 4.01872, -6.48801)

[node name="Spawner" type="Node3D" parent="."]

[node name="Waypoints" type="Node3D" parent="."]

[node name="Temple" parent="." instance=ExtResource("7_e6mty")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.84561, 0)

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("11_6dgnn")
volume_db = -2.811
autoplay = true
